--- a/styles/main.css
+++ b/styles/main.css
@@ -135,7 +135,10 @@ article h2.open-forever{
   display: flex;
   flex-direction: row;
 }
-
+.row2{
+  display: flex;
+  flex-direction: row;
+}
 .product span{
   display: block;
 }
