--- a/styles/main.css
+++ b/styles/main.css
@@ -8,8 +8,7 @@
     * Primaire kleur: #27AE60
     * Secundaire kleur: #2F80ED
 */
-
-body, html{
+body,html{
   margin: 0;
   padding: 0;
 
@@ -245,11 +244,11 @@ footer{
 */
 @font-face {
   font-family: 'Heartbeat';
-  src:  url('fonts/heartbeat.eot') format('eot'),
-        url('fonts/heartbeat.otf') format('otf'),
-        url('fonts/heartbeat.woff') format('woff'),
-        url('fonts/heartbeat.svg') format('svg'),
-        url('fonts/heartbeat.ttf') format('ttf');
+  src:  url('../fonts/Heartbeat.eot') format('eot'),
+      url('../fonts/Heartbeat.otf') format('otf'),
+      url('../fonts/Heartbeat.woff') format('woff'),
+      url('../fonts/Heartbeat.svg') format('svg'),
+      url('../fonts/Heartbeat.ttf') format('ttf');
 }
 
 /*
