--- a/styles/main.css
+++ b/styles/main.css
@@ -175,6 +175,7 @@ tr:last-child {
   border-bottom: none;
 }
 button{
+  text-decoration: none;
   width: 100%;
   margin-top: 1em;
   padding: .5em;
