--- a/styles/main.css
+++ b/styles/main.css
@@ -152,6 +152,15 @@ table td{
 .product:last-of-type{
   margin-right: 0;
 }
+.product2{
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+main{
+  display: flex;
+  align-items: center;
+}
 .row{
   display: flex;
   flex-direction: row;
